# mllint-example-projects

./: .bandit  .dvcignore  .gitignore  .mypy.ini  ReadMe.md  pyproject.toml  report.md  requirements.txt
.dvc/: config
.github/workflows/: mllint.yml
data/: get_data.py
src/: evaluate.py  featurization.py  prepare.py  train.py
src/mlbasic/: evaluate.py  featurization.py  prepare.py
tests/: featurization_test.py  prepare_test.py
