[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mllint-example-projects/basic"
version = "0.1.0"
description = "Example project 1: basic"
authors = ["Bart van Oort <bart@vanoort.is>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.3"
pyaml = "^20.4.0"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
dvc = "^2.0.5"
mllint = "^0.12.1"
pylint = "^2.11.1"
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
bandit = "^1.7.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
